# lin

./: .gitignore  .index.js.swp  .lin.pegjs.swp  .stdlib.swp  .vimexec  .x.lin.swp  LICENSE  README.md  commands.md  csl.js  esl  help.txt  index.js  lin-peg.js  lin.pegjs  mix.exs  package-lock.json  package.json  run.sh  stdlib  stdlib.js
NODE/src/: bridge.js  index.js  stdlib.js
NODE/src/stdlib/: constant.js  count.js  iter.js  multistack.js  num.js  obj.js  stack.js  str.js
NODE/src/test/: base-test.js  int-test.js  multistack-test.js  stack-test.js
comp/: csl.js
docs/: commands.md  functions.md  iteration.md  programflow.md  scope.md
examples/: 99bottles.lin  bin2dec.lin  cat.lin  dec2bin.lin  fibonacci.lin  fizzbuzz.lin  frame.lin  gol.lin  helloworld.lin  logo.lin  quine.lin  sieve.lin  sum.lin  thuemorse.lin  timestable.lin
lib/: lin.ex
native/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
native/src/: lib.rs
src/: bridge.js  bridge.mjs  index.js  index.mjs  index_old.js  int.js  int.mjs  lin-peg.mjs  lin.pegjs  native.cjs  parser.js  prime.js  sl  stdlib.js  stdlib.mjs  unesc.js
src/stdlib/: base.js  constant.js  count.js  dot.js  flow.js  io.js  iter.js  list.js  logic.js  matrix.js  module.js  multistack.js  nest.js  num.js  obj.js  stack.js  str.js
test/: flow-test.js  int-test.js  lin_test.exs  multistack-test.js  num-test.js  stack-test.js
