[package]
name = "lin"
version = "0.0.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scanpw = "0.1.0"
is_prime = "2.0.9"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
